ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    name: ide-sinosig
    namespace: gitpod
  spec:
    defaultBackend:
      service:
        name: proxy
        port:
          number: 443
    ingressClassName: nginx
    rules:
    - host: ide-sinosig.one
      http:
        paths:
        - backend:
            service:
              name: proxy
              port:
                number: 443
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - ide-sinosig.one
      secretName: https-certificates
  status:
    loadBalancer:
      ingress:
      - ip: 10.43.86.61
kind: List
metadata:
  resourceVersion: ""
